--- a/local/index.html
+++ b/local/index.html
@@ -7,8 +7,8 @@
   	<link rel="stylesheet" href="css/style.css"></link>
   </head>
   <body>
-    <div id='outer'>
-      <div id='track'></div>
-    </div>
+    <!-- <div id='barback'><div id='bar'></div></div> -->
+    <!-- <div id='grid'></div> -->
+    <canvas width="512" height="256" id='scope'></canvas>
   </body>
 </html>
