--- a/local/index.html
+++ b/local/index.html
@@ -10,5 +10,6 @@
     <!-- <div id='barback'><div id='bar'></div></div> -->
     <!-- <div id='grid'></div> -->
     <canvas width="512" height="256" id='scope'></canvas>
+    <audio id='song' src="assets/audio/song.mp3"></audio>
   </body>
 </html>
